# cctv-watcher

./: .travis.yml  README.md  cctv-watcher.desktop  gresources.xml  meson.build
.github/workflows/: building.yml
src/: app.vala  camera-list-dialog.vala  camera.vala  config-file.vala  dbus-server.vala  edit-camera-dialog.vala  error-dialog.vala  main-window.vala  mjpeg-camera.vala  mjpeg-renderer.vala  onvif-camera.vala  renderer-widget.vala  renderer.vala  rtsp-camera.vala  rtsp-renderer.vala  settings-dialog.vala  systray.vala  test-camera.vala  test-renderer.vala  utils.vala  v4l-camera.vala  v4l-renderer.vala
ui/: camera-list-dialog.ui  edit-camera-dialog.ui  main-window.ui  settings-dialog.ui
